Bug 101451 - [G33] ES2-CTS.functional.clipping.polygon regression
Summary: [G33] ES2-CTS.functional.clipping.polygon regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i915 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Ville Syrjala
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-15 19:08 UTC by Mark Janes
Modified: 2017-06-21 10:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2017-06-15 19:08:48 UTC
Bisected to:
mesa c1eedb43f32f6a3733f26e7918eb028f68bd60a4
Author:     Ville Syrjälä <ville.syrjala@linux.intel.com>

i915: Fix wpos_tex vs. -1 comparison

wpos_tex used to be a GLuint so assigning -1 to it and
later comparing with -1 worked correctly, but commit
c349031c27b7 ("i915: Fix texcoord vs. varying collision in
fragment programs") changed wpos_tex to uint8_t and hence
broke the comparison. To fix this define a more explicit
invalid value for wpos_tex.

Failing tests:
ES2-CTS.functional.clipping.polygon.multiple_0
ES2-CTS.functional.clipping.polygon.multiple_0_viewport_center
ES2-CTS.functional.clipping.polygon.multiple_0_viewport_corner
ES2-CTS.functional.clipping.polygon.multiple_1
ES2-CTS.functional.clipping.polygon.multiple_1_viewport_center
ES2-CTS.functional.clipping.polygon.multiple_1_viewport_corner
ES2-CTS.functional.clipping.polygon.poly_attrib_clip
ES2-CTS.functional.clipping.polygon.poly_attrib_clip_viewport_center
ES2-CTS.functional.clipping.polygon.poly_attrib_clip_viewport_corner
ES2-CTS.functional.rasterization.interpolation.projected.line_loop
ES2-CTS.functional.rasterization.interpolation.projected.line_strip
ES2-CTS.functional.rasterization.interpolation.projected.lines
ES2-CTS.functional.rasterization.interpolation.projected.triangle_fan
ES2-CTS.functional.rasterization.interpolation.projected.triangle_strip
ES2-CTS.functional.rasterization.interpolation.projected.triangles
ES2-CTS.functional.clipping.polygon.multiple_1
Standard Output:

Render target size: 400x300
Viewport: left=0	bottom=0	width=200	height=200
Rendering triangles. Coordinates:
	v0 (x=-0.2	y=-0.3	z=0	w=1)		(red)
	v1 (x=0.2	y=-0.3	z=0	w=1)		(yellow)
	v2 (x=0	y=-0.9	z=2	w=1)		(+Z clip)	(blue)
	v0 (x=0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=1.2	y=0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=0.6	y=0.6	z=0	w=1)		(blue)
	v0 (x=0.6	y=-1.2	z=0	w=1)		(-Y clip)	(red)
	v1 (x=1.2	y=-0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=9.6	y=-9.6	z=0	w=16)		(blue)
	v0 (x=0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=1.2	y=0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=9.6	y=9.6	z=0	w=16)		(blue)
	v0 (x=-0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=-1.2	y=0.6	z=0	w=1)		(-X clip)	(yellow)
	v2 (x=-9.6	y=9.6	z=0	w=16)		(blue)
	v0 (x=-0.6	y=-1.2	z=0	w=1)		(-Y clip)	(red)
	v1 (x=-1.2	y=-0.6	z=0	w=1)		(-X clip)	(yellow)
	v2 (x=-9.6	y=-9.6	z=0	w=16)		(blue)
Comparing images... 
Deviation within radius of 1 is allowed.
6 faulty pixels are allowed.
80 deviating pixel(s) found.
4588 faulty pixel(s) found.
Got 4588 faulty pixel(s).


Sample output:
ES2-CTS.functional.clipping.polygon.multiple_1
Standard Output:

Render target size: 400x300
Viewport: left=0	bottom=0	width=200	height=200
Rendering triangles. Coordinates:
	v0 (x=-0.2	y=-0.3	z=0	w=1)		(red)
	v1 (x=0.2	y=-0.3	z=0	w=1)		(yellow)
	v2 (x=0	y=-0.9	z=2	w=1)		(+Z clip)	(blue)
	v0 (x=0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=1.2	y=0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=0.6	y=0.6	z=0	w=1)		(blue)
	v0 (x=0.6	y=-1.2	z=0	w=1)		(-Y clip)	(red)
	v1 (x=1.2	y=-0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=9.6	y=-9.6	z=0	w=16)		(blue)
	v0 (x=0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=1.2	y=0.6	z=0	w=1)		(+X clip)	(yellow)
	v2 (x=9.6	y=9.6	z=0	w=16)		(blue)
	v0 (x=-0.6	y=1.2	z=0	w=1)		(+Y clip)	(red)
	v1 (x=-1.2	y=0.6	z=0	w=1)		(-X clip)	(yellow)
	v2 (x=-9.6	y=9.6	z=0	w=16)		(blue)
	v0 (x=-0.6	y=-1.2	z=0	w=1)		(-Y clip)	(red)
	v1 (x=-1.2	y=-0.6	z=0	w=1)		(-X clip)	(yellow)
	v2 (x=-9.6	y=-9.6	z=0	w=16)		(blue)
Comparing images... 
Deviation within radius of 1 is allowed.
6 faulty pixels are allowed.
80 deviating pixel(s) found.
4588 faulty pixel(s) found.
Got 4588 faulty pixel(s).
Comment 1 Ville Syrjala 2017-06-21 10:18:05 UTC
commit 0eef03a6f2f7fa7968accaa2ab2c3d7431e984b8
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Fri Jun 16 23:23:41 2017 +0300

    i915: Always emit W on gen3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.